@@ -1,6 +1,7 @@
 = 2.1.1.0 =
 * GD Categories & search blocks shows validation errors in console - FIXED
 * Conditional fields feature for the custom fields for AUI style - ADDED
+* Kadence starter templates page is broken when monthly schedule option is set - FIXED
 
 = 2.1.0.20 =
 * Distance to post badge don't set direction on map from ajax loaded listing - FIXED
